--- a/Web/index.html
+++ b/Web/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="card">
                 <h3>🚰 Status Keran</h3>
-                <p class="value" id="valve">UNKNOWN</p>
+                <p class="value" id="valve">MATI</p>
             </div>
         </div>
 
@@ -44,4 +44,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
