--- a/Web/index.html
+++ b/Web/index.html
@@ -33,12 +33,17 @@
         </div>
 
         <div class="stats-section">
-            <h2>📊 Statistik Penggunaan Air</h2>
-            <div class="stats-card">
-                <p>Total Waktu Keran Menyala:</p>
-                <p class="stats-value"><span id="total-time">0</span> Detik</p>
-                <small>(Dihitung selama dashboard ini dibuka)</small>
-            </div>
+    <h2>📊 Statistik Penggunaan Air</h2>
+    <div class="stats-card">
+        <p>Total Waktu Keran Menyala:</p>
+        <p class="stats-value"><span id="total-time">0</span> Detik</p>
+        
+        <p>Estimasi Air Terpakai:</p>
+        <p class="stats-value"><span id="water-consumption">0</span> Liter</p>
+        
+        <small>(Dihitung berdasarkan durasi penyiraman terakhir)</small>
+    </div>
+</div>
         </div>
     </div>
 
@@ -46,3 +51,4 @@
 </body>
 
 </html>
+
