--- a/Web/index.html
+++ b/Web/index.html
@@ -39,7 +39,7 @@
         <p class="stats-value"><span id="total-time">0</span> Detik</p>
         
         <p>Estimasi Air Terpakai:</p>
-        <p class="stats-value"><span id="water-consumption">0</span> Liter</p>
+        <p class="stats-value"><span id="water-usage">0</span> Liter</p>
         
         <small>(Dihitung berdasarkan durasi penyiraman terakhir)</small>
     </div>
@@ -51,4 +51,5 @@
 </body>
 
 </html>
+
 
