Add network monitor section to index.html
Added a network monitor section to display latency and packet loss.

--- a/Web/index.html
+++ b/Web/index.html
@@ -43,6 +43,12 @@
         
         <small>(Dihitung berdasarkan durasi penyiraman terakhir)</small>
     </div>
+            <div class="stats-card">
+    <h3>📡 Network Monitor</h3>
+    <p>Latency: <span id="delayTime">0</span></p>
+    <p>Packet Loss: <span id="packetLoss">0</span></p>
+</div>
+            
 </div>
         </div>
     </div>
@@ -51,5 +57,6 @@
 </body>
 
 </html>
+
 
 
