Fix HTML formatting and ensure proper structure

--- a/Web/index.html
+++ b/Web/index.html
@@ -55,17 +55,17 @@
             <div style="display: flex; gap: 20px; flex-wrap: wrap; justify-content: center;">
                 <div class="stats-card">
                     <p>Total Waktu Keran Menyala:</p>
-                    <p class="stats-value"><span id="total-time">0</span> Detik</p>
+                    <p class="stats-value"><span id="total-time">0</span> </p>
                     
                     <p>Estimasi Air Terpakai:</p>
-                    <p class="stats-value"><span id="water-usage">0</span> Liter</p>
+                    <p class="stats-value"><span id="water-usage">0</span> </p>
                     
                     <small>(Dihitung berdasarkan durasi penyiraman terakhir)</small>
                 </div>
 
                 <div class="stats-card">
                     <h3>📡 Network Status</h3>
-                    <p>Latency: <span id="delayTime">0</span> ms</p>
+                    <p>Delay (Latency): <span id="delayTime">0</span> ms</p>
                     <p>Packet Loss: <span id="packetLoss">0</span> %</p>
                 </div>
             </div>
@@ -75,4 +75,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
